--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+* {
+  font-family: inherit;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +11,17 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: var(--dark-blue);
+
+  font-family: 'League Spartan', sans-serif;
+
+  font-size: 0.8rem;
+
+  line-height: 1.125rem;
+
+  letter-spacing: -0.1px;
+  color: var(--white);
 }
 
 code {
