--- a/src/variables.css
+++ b/src/variables.css
@@ -20,4 +20,6 @@
     --orange-transparent: #ff91001a;
     --white-gray: #DFE3FA;
     --white-gray-transparent: #dfe3fa17;
+
+    --black: #0C0E16;
 }
