--- a/src/components/invoice-list/invoice-item/invoice-item.module.css
+++ b/src/components/invoice-list/invoice-item/invoice-item.module.css
@@ -11,8 +11,10 @@
 
     background-color: var(--blue-black);
 
+    text-decoration: none;
     transition: border 0.15s;
     cursor: pointer;
+    color: white;
 }
 
 .item:hover {
