--- a/src/components/invoice-page/main-info/main-info.module.css
+++ b/src/components/invoice-page/main-info/main-info.module.css
@@ -21,6 +21,10 @@
 }
 
 .info > div {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+
     width: 33%;
 }
 
@@ -40,15 +44,16 @@ table {
 
 table th {
     font-size: 1rem;
-    padding: 1rem 0 0 0;
+    padding: 1rem 0 0.5rem 0;
 }
 
 table td {
-    padding: 0.5rem 1rem;
+    padding: 0.7rem 1.5rem;
 }
 
 table tbody {
     text-align: center;
+    font-size: 1rem;
 }
 
 table tbody td:first-child {
@@ -57,10 +62,19 @@ table tbody td:first-child {
 
 table tbody tr:last-child {
     background-color: var(--black);
-    font-size: 1.2em;
+    font-size: 1.2rem;
+}
+
+table tbody tr:last-child td {
+    padding: 2rem 1.5rem;
+}
+
+table tbody tr:last-child td:last-child {
+    font-size: 1.5em;
 }
 
 /* Move in global styles */
 h3 {
     font-weight: 400;
+    margin-bottom: 0.5rem;
 }
