--- a/src/components/header/forms/new-invoice.form.jsx/new-invoice.module.css
+++ b/src/components/header/forms/new-invoice.form.jsx/new-invoice.module.css
@@ -8,11 +8,25 @@
     gap: 2rem;
 
     width: 35%;
-    height: calc(100vh - 8rem);
+    height: 100vh;
 
-    padding: 4rem 2rem;
+    padding: 4rem 2rem 1rem;
 
     background-color: var(--form-black);
+
+    overflow-y: scroll;
+}
+
+.newInvoiceForm::-webkit-scrollbar {
+    width: 3px;
+}
+
+.newInvoiceForm::-webkit-scrollbar-thumb {
+    background-color: var(--purple);
+}
+
+.newInvoiceForm > div {
+    width: 100%;
 }
 
 .CPC {
@@ -45,17 +59,33 @@
     margin-top: 1.5rem;
 }
 
+.itemList td {
+    padding: 0.4rem;
+}
+
+.itemList table tbody tr:last-child {
+    background-color: inherit;
+    font-size: inherit;
+}
+
+.itemList table tbody tr:last-child td{
+    padding: 0.4rem;
+}
+
+.itemList table tbody tr:last-child td:last-child{
+    width: 1%;
+    padding: 0.7rem 1.5rem 0.7rem 0.2rem;
+}
+
 .deleteItem {
     width: 1rem;
     height: 1rem;
-
-    padding: 0;
 
     background-image: url('../../../../icons/delete.svg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 0.75rem 0.75rem;
+    background-size: 0.85rem 0.85rem;
 
 
     cursor: pointer;
@@ -66,6 +96,31 @@
     background-image: url('../../../../icons/delete-red.svg');;
 }
 
-input {
+.controlButtons {
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+
     width: 100%;
+}
+
+input, select {
+    width: 100%;
+
+    padding: 0.5rem 0.75rem;
+
+    border: 1px solid var(--dark-blue);
+    border-radius: 5px;
+    outline: none;
+
+    background-color: var(--blue-black);
+
+    font-size: 1rem;
+
+    transition: border 0.1s;
+    color: var(--white);
+}
+
+input:focus, select:focus {
+    border: 1px solid var(--purple);
 }
