--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,16 @@
 * {
+  box-sizing: border-box;
   font-family: inherit;
   margin: 0;
   padding: 0;
+}
+
+html::-webkit-scrollbar {
+  width: 3px;
+}
+
+html::-webkit-scrollbar-thumb {
+  background-color: var(--purple);
 }
 
 body {
